--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.1.0",
     "bcrypt": "^5.1.1",
+    "ldrs": "^1.0.1",
     "mongodb": "^6.6.2",
     "mongoose": "^8.3.4",
     "next": "14.2.3",
